Bug 145952 - CRASH: pressing any arrow key after displaying autofilter dropdown (gen)
Summary: CRASH: pressing any arrow key after displaying autofilter dropdown (gen)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-29 17:20 UTC by Xisco Faulí
Modified: 2021-12-01 10:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (487.13 KB, video/x-matroska)
2021-11-30 11:18 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-11-29 17:20:37 UTC
Step to reproduce:
1. Open attachment 173241 [details] from bug 142965
2. Open the autofilter in A1
3. Press any arrow key

-> Crash

reproduced in

Version: 7.3.0.0.beta1+ / LibreOffice Community
Build ID: 81b26582ed62db40e2be701ddefede7d8230d0d2
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2021-11-29 17:22:00 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2acdb3e617658ca19de26e8928e42b4955622feb

author	Caolán McNamara <caolanm@redhat.com>	2021-11-19 11:38:58 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-11-23 17:36:13 +0100
commit 2acdb3e617658ca19de26e8928e42b4955622feb (patch)
tree f543f678b1b72a7a9cff80b5dbed301cd21fbbaf
parent f5137ed5453661d21e85ecb94a08cfccae899ca1 (diff)
tdf#139460 improve autofilter sub-menu interaction under gtk
 
Bisected with: bibisect-linux64-7.3

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2021-11-29 21:00:26 UTC
I can't reproduce this yet, but the title says (gen) and the comment #1 says VCL: gtk3. Was it gen or gtk that crashes (though I tried both)?

If I click in A1 and the autofilter appears, I expect the focus to be in the entry, i.e. the blinking cursor is active in the entry in the middle of the dropdown, is that the case for you too?

Though I've also tried moving the focus to the treeview above it without any crash on pressing arrows there either. I am checking with a later version which had some follow up fixes, but not ones I'd expect to have an effect of key handling, but I can recheck with the exact mentioned commit.
Comment 3 Caolán McNamara 2021-11-30 11:12:11 UTC
nothing seen on the exact commit id mentioned either unfortunately
Comment 4 Xisco Faulí 2021-11-30 11:16:59 UTC
yep, it's only reproducible with GEN, not with GTK3, the information ins the description is wrong.

also reproducible in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 6a2352ca8abbdcd6a6376144e6dd185ffeaef5d0
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2021-11-30 11:17:50 UTC
(In reply to Caolán McNamara from comment #2)
> I can't reproduce this yet, but the title says (gen) and the comment #1 says
> VCL: gtk3. Was it gen or gtk that crashes (though I tried both)?
> 
> If I click in A1 and the autofilter appears, I expect the focus to be in the
> entry, i.e. the blinking cursor is active in the entry in the middle of the
> dropdown, is that the case for you too?

The cursor is in the Search item textbox
Comment 6 Xisco Faulí 2021-11-30 11:18:45 UTC
Created attachment 176590 [details]
screencast
Comment 7 Caolán McNamara 2021-11-30 11:31:49 UTC
baffling, I dont see anything under valgrind either. Can I get a backtrace?
Comment 8 Xisco Faulí 2021-11-30 14:27:20 UTC
Hi Caolán, I found the reason why it crashes for me and not for you.
it only crashes when using LO_COLLECT_UIINFO, like LO_COLLECT_UIINFO="test.log" SAL_USE_VCLPLUGIN=gen instdir/program/soffice
Comment 9 Caolán McNamara 2021-11-30 16:19:51 UTC
ah, very good, now I can reproduce. I was wondering what could be happening.
Comment 10 Caolán McNamara 2021-11-30 16:42:26 UTC
I imagine not crashing is "good enough"
Comment 11 Commit Notification 2021-11-30 18:54:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/327f2c85beb2c90d2ccdedbffe57c0831ebf16d6

tdf#145952 don't crash with LO_COLLECT_UIINFO set in autofilter

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2021-11-30 18:58:30 UTC
no crash in trunk now, backport to 7-4 in gerrit
Comment 13 Commit Notification 2021-12-01 10:55:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/e8b16dad8a54e1d213fae59e9fdc557c478aa0ef

tdf#145952 don't crash with LO_COLLECT_UIINFO set in autofilter

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.