tdf#145952 don't crash with LO_COLLECT_UIINFO set in autofilter

Change-Id: I27c474c522554c825c0296cdf711d481d22fd024
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126129
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>